# CareSyncAI

./: .gitignore  README.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b3b4b2f4a10_add_agentic_patient_platform.py  6fdff72dbf0b_add_patient_history_access_controls.py  afc6c33471a1_create_healthcare_tables.py  b8d9c2f1e6a4_add_apple_health_export_metadata.py  c2b7a4f19e21_add_health_app_connections.py  d6f4d8b7d2c1_add_agentic_soft_delete_flag.py  e4a1b6c9d2f3_add_apple_health_xml_support.py  f3b9d7a1c4e2_add_health_metric_file_provenance.py  fa3d5634185f_add_health_ai_calendar_tables.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py  storage.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agentic.py  healthcare.py
backend/app/modules/: __init__.py
backend/app/modules/agentic/: __init__.py  llm.py  router.py  schemas.py  service.py
backend/app/modules/ai_assistant/: router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/calendar/: router.py  schemas.py  service.py
backend/app/modules/content/: router.py  schemas.py  service.py
backend/app/modules/gp/: router.py  schemas.py  (+1 more)
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/tools/: seed_staff_users.py
backend/credentials/: README.md
backend/tests/: test_agentic_llm.py  test_agentic_service.py  test_health_data_service.py  test_patient_history_access.py
(+67 files in other folders)
